cabal-version:   3.0
name:            cryptostore-use-crypton
version:         0.1.0.0
license:         NONE
author:          Joe
maintainer:      joe@example.com
build-type:      Simple

common warnings
    ghc-options: -Wall

executable cryptostore-use-crypton
    import:           warnings
    main-is:          Main.hs
    build-depends:    
        base,
        cryptostore
    default-language: Haskell2010
